--- a/src/styles/YourProfileBtn.css
+++ b/src/styles/YourProfileBtn.css
@@ -2,7 +2,6 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   border: none;
@@ -13,6 +12,7 @@
 .YourProfileBtn > button .media {
   width: 100%;
   height: 100%;
+  border-radius: 50%;
   object-fit: cover;
 }
 
